@@ -129,9 +129,7 @@ _network() {
         _online_switch
     fi
     # ensure to get correct names for network devices
-    udevadm trigger --action=add --type=subsystems
-    udevadm trigger --action=add --type=devices
-    udevadm settle
+    _udev_trigger
     _NETPARAMETERS=""
     while [[ -z "${_NETPARAMETERS}" ]]; do
         _INTERFACES=()
