@@ -22,8 +22,9 @@ _MENU_TITLE=" Logging to ${_VC} | ${_LOG} "
 
 _graphic_options() {
     if ! [[ "${_RUNNING_ARCH}" == "riscv64" ]]; then
-        echo -e " \e[1m-gnome\e[m           Launch Gnome desktop with Wayland backend."
-        echo -e " \e[1m-plasma\e[m          Launch KDE Plasma desktop with Wayland backend."
+        echo -e " \e[1m-cosmic\e[m          Launch Cosmic desktop"
+        echo -e " \e[1m-gnome\e[m           Launch Gnome desktop"
+        echo -e " \e[1m-plasma\e[m          Launch KDE Plasma desktop"
     fi
 }
 
