@@ -1,4 +1,5 @@
-On the road to 2026.01:
+On the road to 2026.01:#
+.added Cosmic desktop environment
 ---
 Highlights 2025.12:
 - kernel 6.18.x
